# cd-command

./: Makefile  Makefile.in  README  cddb.c  cddb.h  common.h  config.status  configure  configure.in  main.c
autom4te.cache/: output.0  traces.0
libUseful-2.0/: config.status
