

AC_INIT([main.c])

VERSION="0.0.2" 
AC_SUBST(VERSION) 

AC_CONFIG_SUBDIRS([libUseful-2.0])

AC_PROG_CC 
AC_LANG_C 
AC_PROG_MAKE_SET 
AC_PROG_INSTALL 
AC_HEADER_STDC 

AC_CHECK_LIB(z,deflate,,)
cf_have_libz=$ac_cv_lib_z_deflate

AC_ARG_ENABLE(esd, [  --enable-esd       use ESound], cf_use_esd=$enableval )

if test "$cf_use_esd" = "yes"
then
AC_CHECK_LIB(esd,esd_open_sound,,)
cf_have_libesd=$ac_cv_lib_esd_esd_open_sound
fi

dnl read Makefile.in and write Makefile 
AC_OUTPUT(Makefile)


